[gd_scene load_steps=8 format=3 uid="uid://b8cvxql2jny8o"]

[ext_resource type="Script" uid="uid://ckqxm5dvvp1nk" path="res://hazards/stationary/spring.gd" id="1_8mpch"]
[ext_resource type="Texture2D" uid="uid://mogf6recynex" path="res://assets/Sprites/SpringUpTrigger.png" id="2_1lsq6"]
[ext_resource type="AudioStream" uid="uid://buessrhq005s5" path="res://assets/sounds/spring.wav" id="3_1lsq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_on0fa"]
size = Vector2(22, 16)

[sub_resource type="Animation" id="Animation_1lsq6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpringSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_8mpch"]
resource_name = "default"
length = 0.466673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpringSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_on0fa"]
_data = {
&"RESET": SubResource("Animation_1lsq6"),
&"default": SubResource("Animation_8mpch")
}

[node name="Spring" type="Node2D"]
script = ExtResource("1_8mpch")

[node name="SpringSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_1lsq6")
hframes = 7
frame = 6

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_on0fa")

[node name="SpringAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_on0fa")
}

[node name="SpringSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1lsq6")
pitch_scale = 1.5
bus = &"SFX"

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
